tests/parser/fail/local-name-collision.som
"test:
failMessage:
  - contains: foo
  - contains: defined twice
"

LocalNameCollision = (
  run = (
    |a foo b c foo d|
    42.
  )
)
